solved update productsku status bug and small small bugs..............

--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -121,7 +121,7 @@
       <button type="button" id="addoptbtn" class="btn btn-outline-success" (click)="AddOptions()"
         style="font-family: initial;">Add NewOption</button>
 
-      <div mat-dialog-action [align]="'center'">
+      <div mat-dialog-action [align]="'center'" id="submitbtns">
 
         <button style="margin-left:10px" mat-raised-button color="primary"
           (click)="addProduct(productForm)">Submit</button>
