--- a/src/app/product-sku-detail/product-sku-detail.component.scss
+++ b/src/app/product-sku-detail/product-sku-detail.component.scss
@@ -2,6 +2,10 @@
  *   Copyright (c) 2023 Dmantz Technologies Pvt ltd
  *   All rights reserved.
  */
+ #statuslable{
+  font-size: 22px;
+  margin-top: 10px;
+ }
 .box{
    
     margin-top: 50px;
