--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.scss
@@ -200,7 +200,10 @@ body {
 //     }
 // }
 @media only screen and (min-width: 768px) and (max-width: 1020px) {
-    
+    #submitbtns{
+        margin-top: -200px;
+        position: relative;
+    }
     .product-name {
         font-size: large;
         margin-left: 9%;
