--- a/src/app/modules/admin/components/product-dialog/product-dialog.component.html
+++ b/src/app/modules/admin/components/product-dialog/product-dialog.component.html
@@ -10,7 +10,7 @@
     <form [formGroup]="productForm">
       <div>
         <mat-form-field class="product-name" appearance="fill">
-          <mat-label [ngStyle]="getInputStyles()">Product Name</mat-label>
+          <mat-label >Product Name</mat-label>
           <input matInput formControlName="productName">
 
           <div *ngIf="submitted && productForm.get('productName').invalid">
@@ -21,7 +21,7 @@
 
 
         <mat-form-field class="vendor-select" appearance="fill">
-          <mat-label [ngStyle]="getInputStyles()">Vendor Name</mat-label>
+          <mat-label>Vendor Name</mat-label>
           <mat-select formControlName="manufacturerId">
             <mat-option *ngFor="let vendor of vendorData" [value]="vendor.manufacturerId" [ngStyle]="getInputStyles()">
               {{vendor.manufacturerName}}
@@ -35,7 +35,7 @@
 
 
         <mat-form-field class="search-tag_-list" appearance="fill" id="search_tag">
-          <mat-label [ngStyle]="getInputStyles()">Search Tags</mat-label>
+          <mat-label>Search Tags</mat-label>
           <mat-chip-list #chipList aria-label="Searchtag selection">
             <mat-chip *ngFor="let tag of searchTags" (removed)="removeTag(tag)">
               {{tag}}
@@ -55,7 +55,7 @@
       </div>
       <div>
         <mat-form-field class="product-description" appearance="fill">
-          <mat-label [ngStyle]="getInputStyles()">Product Description</mat-label>
+          <mat-label >Product Description</mat-label>
           <textarea formControlName="productDesc" matInput placeholder="Type Here..."></textarea>
 
           <div *ngIf="submitted && productForm.get('productDesc').invalid">
