added upload imageurl in environment.prod.ts file........

--- a/src/app/product-sku/product-sku.component.html
+++ b/src/app/product-sku/product-sku.component.html
@@ -118,7 +118,7 @@
                                 </mat-select>
                             </mat-form-field>
                             <span *ngIf="selectedOptionValue" class="clear-icon" (click)="clearSelection()">clear</span>
-                            <div *ngIf="note" style="font-size: 12px; color:olive;">
+                            <div *ngIf="note" style="font-size: 12px; color:indigo">
                                 <p>Note:{{note}}</p>
                             </div>
                             <div *ngIf="errormsg" style="color: red;">
