--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
@@ -45,6 +45,16 @@
                                     style="width: 25px;height: 25px;" [disabled]="isDisable" value="item.orderItemId">
                                 Partially <br>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp; Filled
                             </label>
+                            <!-- Replace this existing code with the modified code -->
+
+                            <!-- <input type="checkbox" (click)="onCheckboxChange($event, i, 'Yes')"
+                                style="width: 25px; height: 25px;" [disabled]="firstCheckbox || disabledRows[i]"
+                                value="item.orderItemId">Yes
+
+                            <input type="checkbox" (click)="onCheckboxChange($event, i, 'Partially-Filled')"
+                                style="width: 25px; height: 25px;" [disabled]="isDisable || disabledRows[i]"
+                                value="item.orderItemId">Partially Filled
+ -->
 
 
                         </div>
