implemented alignment for add new peoductsku component........

--- a/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
+++ b/src/app/modules/admin/components/finish-filling-action/finish-filling-action.component.html
@@ -53,8 +53,7 @@
 
                             <input type="checkbox" (click)="onCheckboxChange($event, i, 'Partially-Filled')"
                                 style="width: 25px; height: 25px;" [disabled]="isDisable || disabledRows[i]"
-                                value="item.orderItemId">Partially Filled
- -->
+                                value="item.orderItemId">Partially Filled-->
 
 
                         </div>
