--- a/src/app/product-sku/product-sku.component.scss
+++ b/src/app/product-sku/product-sku.component.scss
@@ -59,34 +59,17 @@
 //     }
 
 // }
+    [class*="col-2"] {
+      // width: 60%;
+      padding: 0px;
+      margin-left: 6%;
+    }
+h1{
+  margin-left: 430px;
+  font-family: initial;
+  font-weight: bolder;
+}
 
-
-// @media screen and (min-width: 500px) and (max-width: 1350px) {
-
-//   .button{
-//     margin-left: 170px;
-//     margin-top: 140px;
-  
-//   }
-//   .textarea{
-//     position: absolute;
-//     width:300px;
-//     height: 0px;
-//     margin-top: 130px;
-//   }
-
-//   .select{
-//     font-size: medium;
-//     // margin-left: -50px;
-//     // margin-top: -10px;
-//   }
-//   #toggle{
-//     position: absolute;
-//     margin-left: 100px;
-//     margin-top: 360px;
-//    }
-
-// }
 .catalogName {
   font-size: large;
   margin-left: 5%;
@@ -142,7 +125,7 @@
 
 .dialog-content {
   height: 700px;
-  width: 1100px;
+  width: 100%;
   font-weight: bolder;font-family: initial;
 }
 
@@ -208,155 +191,169 @@ body{
   display: inline-flexbox;
  position: relative;
 }
+#submtbtns{
+  margin-top: 50px;
+}
 
-// @media screen and (min-width:360px) and (max-width:1400px){
-//   .dialog-content {
-//       height: auto;
-//       width: auto;
-//   } 
-//   .mat-dialog-title{
-//   margin-left: 300px;
-//   }
-  
-//   #crossbtn{
-//     margin-left: 800px;
-//     margin-top: -50px;
-//   }
-  
-//   #toggle{
-//     margin-left: 100px;
-//     margin-top: 20px;
-//   }
-//   .select{
-//     margin-left: -30px;
-//     font-size: 18px;
-//   }
-//   body{
-//     background-color:var(--toast-background);
-//      color:var(--toast-text); 
-//   }
-// }
-@media only screen and (min-width:768px) and (max-width:1368px){
-  .catalogName {
-    font-size: large;
-    margin-left: 5%;
-    font-weight: bolder;font-family: initial;
-  
-  }
-  
-  #crossbtn{
-    margin-left: 1000px;
-    margin-top: -50px;
-    color: red;
-    background-color: var(--toast-background);
-    color: var(--toast-text),
-  }
-  
-  .catalogDesc {
-    font-size: medium;
-    margin-left: 7%;
-    font-weight: bolder;font-family: initial;
-  }
-  .dob {
-    // font-size: medium;
-    margin-left: 5%;
-    height: 10px;
-    margin-top: -20px;
-    font-weight: bolder;font-family: initial;
-  
-  }
-  #calicon{
-    margin-left: 150px;
-    font-weight: bolder;font-family: initial;
-  }
-  .area {
-    font-size: large;
+@media only  screen and (max-width: 1024px) {
+
+  [class*="col-2"] {
+    //  width: 60%;
+    padding: 0px;
     margin-left: 6%;
-    font-weight: bolder;font-family: initial;
   }
-  .city {
-    font-size: large;
-    margin-left: 6%;
-    font-weight: bolder;font-family: initial;
-  }
-  .state {
-    font-size: large;
-    margin-left: 6%;
-    font-weight: bolder;font-family: initial;
-  }
-  .mobileNo {
-    font-size: large;
-    margin-left: 7%;
-    font-weight: bolder;font-family: initial;
-  }
-  
-  .dialog-content {
-    height: 700px;
-    width: 1100px;
-    font-weight: bolder;font-family: initial;
-  }
-  
-  button {
-    font-size: large;
-    margin-top: 100px;
-    font-weight: bolder;font-family: initial;
-  }
-  .startdt{
-    font-size: large;
-    margin-left: 7%; 
-    margin-top: -20px;
-    font-weight: bolder;font-family: initial;
-    
-  }
-  
-  .enddt{
-    font-size: large;
-    margin-left: 9%; 
-    font-weight: bolder;font-family: initial;
-  
-  }
-  .pincode{
-    font-size: large;
-    margin-left: 5%; 
-    margin-top: 10px;
-    font-weight: bolder;font-family: initial;
-  
-  }
-  #toggle{
-    margin-left: 100px;
-    margin-top: 20px;
-  }
-  .select{
-    margin-left: -30px;
-    font-size: 18px;
-    font-weight: bolder;font-family: initial;
-  }
-  body{
-    background-color:var(--toast-background);
-     color:var(--toast-text); 
-  }
-  #selectoptions{
-    margin-left: 400px;
-    margin-top: -70px;
-    font-family: initial;
-    font-size: 15px;
+h1{
+margin-left: 330px;
+font-family: initial;
+font-weight: bolder;
+}
+
+.catalogName {
+font-size: large;
+margin-left: 5%;
+font-weight: bolder;font-family: initial;
+
+}
+
+#crossbtn{
+margin-left: 700px;
+margin-top: -50px;
+color: red;
+background-color: var(--toast-background);
+color: var(--toast-text),
+}
+
+.catalogDesc {
+font-size: medium;
+margin-left: 7%;
+font-weight: bolder;font-family: initial;
+}
+.dob {
+// font-size: medium;
+margin-left: 5%;
+height: 10px;
+margin-top: -20px;
+font-weight: bolder;font-family: initial;
+
+}
+#calicon{
+margin-left: 150px;
+font-weight: bolder;font-family: initial;
+}
+.area {
+font-size: large;
+margin-left: 6%;
+font-weight: bolder;font-family: initial;
+}
+.city {
+font-size: large;
+margin-left: 6%;
+font-weight: bolder;font-family: initial;
+}
+.state {
+font-size: large;
+margin-left: 6%;
+font-weight: bolder;font-family: initial;
+}
+.mobileNo {
+font-size: large;
+margin-left: 7%;
+font-weight: bolder;font-family: initial;
+}
+
+.dialog-content {
+height: 700px;
+width: 100%;
+font-weight: bolder;
+font-family: initial;
+overflow-y: auto;
+overflow-x:hidden ;
+
+}
+
+button {
+font-size: large;
+margin-top: 100px;
+font-weight: bolder;font-family: initial;
+}
+.startdt{
+font-size: large;
+margin-left: 7%; 
+margin-top: -20px;
+font-weight: bolder;font-family: initial;
+
+}
+
+.enddt{
+font-size: large;
+margin-left: 9%; 
+font-weight: bolder;font-family: initial;
+
+}
+.pincode{
+font-size: large;
+margin-left: 5%; 
+margin-top: 10px;
+font-weight: bolder;font-family: initial;
+
+}
+#toggle{
+margin-left: 10px;
+margin-top: 20px;
+}
+.select{
+margin-left: -30px;
+font-size: 18px;
+font-weight: bolder;font-family: initial;
+}
+body{
+background-color:var(--toast-background);
+ color:var(--toast-text); 
+}
+#selectoptions{
+margin-left: 300px;
+margin-top: -70px;
+font-family: initial;
+font-size: 15px;
+position: absolute;
+position: fixed;
+}
+#displayselectedopts{
+margin-left: 600px;
+margin-top: -90px;
+font-family: initial;
+display:inline-flexbox;
+ position: relative;
+//  position: static;
+width: 200px;
+
+}
+.display{
+margin-left:10px;
+margin-top: -18px;
+
+display: inline-flexbox;
+position: relative;
+}
+
+#note {
+  display: block;
+  width: 300px; /* Set the desired width */
+  margin:  auto; /* Center the element horizontally */
+ 
+ margin-bottom: -100px;
+ margin-left: -20px;
+ 
+}
+
+#submtbtns{
+  margin-top: 20px;
+}
+  .clear-icon{
     position: absolute;
-  }
-  #displayselectedopts{
-    margin-left: 700px;
-    margin-top: -90px;
-    font-family: initial;
-    display:inline-flexbox;
-     position: relative;
-    //  position: static;
-    
-  }
-  .display{
-    margin-left:10px;
-   margin-top: -18px;
-    
-    display: inline-flexbox;
-   position: relative;
+    margin-left: 180px;
+    margin-top: -40px;
   }
 }
+
 
